    + [NT] Downgrade backports-changes-missing to a wishlist (I) tag.
      Thanks to Vincent Cheng for the report.  (Closes: #785084)
  * checks/changelog-file.{desc,pm}:
    + [BR] Detect empty changelog entry.  (Closes:  #763457)
  * checks/debhelper.{desc,pm}:
    + [NT] Warn about using dh --{until,before,after,remaining} as
      these are deprecated and have been since debhelper/8.9.4.
  * checks/files.pm:
    + [NT] Apply patch from Tomasz Buchert to avoid false-positive
      package-contains-timestamped-gzip in some cases.
      (Closes: #762105)
    + [BR] Detects // tricks in privacy breach test.
      (Closes: #786362)
    + [BR] Apply patch from Lisandro Damián Nicanor Pérez Meyer
      for detecting private cmake file.
      (Closes: #785329).
    + [BR] Detect package shipping apt_preferences(5) file.
      (Closes: #786533).
    + [BR] Detect package shipping oui or iab ieee database.
      (Closes: #785662).
    + [NT] Add a check for packages without intermediate
      directories.
    + [BR] Avoid a false positive in jsom for defaultpresets.xml
      from openmapstreet.
    + [NT] Tweak the "extra-license-file" check to avoid some
      common false-positives.
  * checks/java.pm:
    + [NT] Fix "off-by-one" in the check for the maximum permitted
      Java major version.
  * checks/manpages.{desc,pm}:
    + [NT] Retire the hyphen-used-as-minus-sign tag as upstream now
      renders both "-" and "\-" as HYPHEN-MINUS.  (Closes: #785353)
  * checks/po-debconf.pm:
    + [JW] Use TMPDIR rather than TEMPDIR for temporary files.
      (Closes: #787930)
  * checks/source-copyright.pm:
    + [NT] Apply patch from Evgeni Golov to permit multiple
      different "public-domain licenses", as they are expected to
      describe why the affected files are in public domain.
      (Closes: #787248)

  * collection/{debfiles,doc-base-files,init.d,menu-files}{,.desc}:
    + [NT] Remove deprecated and unused collections.  These were