@@ -5,6 +5,7 @@ Maintainer: <lintian-maint@debian.org>
 Uploaders: <lintian-maint@debian.org>, Russ Allbery <rra@debian.org>,
  Russ Allbery <rra@debian.org>,
  I L. Oop  <fields-maintainer-general@packages.qa.debian.org>,
+ Double comma <double@comma.com>, ,
  Mr. Missing Comma <mrmc@comma.com>
  Mrs. Missing Comma <mrsmc@comma.com>
 Standards-Version: {$standards_version}
