@@ -2,6 +2,7 @@ E: fields-maintainer-general source: maintainer-name-missing <lintian-maint@debi
 E: fields-maintainer-general source: uploader-address-causes-mail-loops-or-bounces I L. Oop  <fields-maintainer-general@packages.qa.debian.org>
 E: fields-maintainer-general source: uploader-address-malformed Mr. Missing Comma <mrmc@comma.com> Mrs. Missing Comma <mrsmc@comma.com>
 E: fields-maintainer-general source: uploader-name-missing <lintian-maint@debian.org>
+E: fields-maintainer-general source: uploader-name-missing you have used a double comma
 E: fields-maintainer-general: maintainer-name-missing <lintian-maint@debian.org>
 W: fields-maintainer-general source: changelog-should-mention-nmu
 W: fields-maintainer-general source: duplicate-uploader Russ Allbery <rra@debian.org>
